# chatgpt-cli

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: check.yml
chatgpt_cli/: chatapi.py  config.py  error.py  main.py  term.py
chatgpt_cli/cmds/: ask.py  base.py  chat.py  config.py
tests/: test_chatapi.py  test_cmd.py  test_term.py
