[project]
name = "chatgpt-cli"
version = "0.1.0"
description = "A ChatGPT CLI tool based on the OpenAI API, for hardcore terminal users."
authors = [
    {name = "jaypei", email = "jaypei97159@gmail.com"},
]
dependencies = [
    "prompt-toolkit>=3.0.38",
    "openai>=0.27.0",
    "rich>=13.3.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
