[project]
name = "chatgpt-cli"
version = "0.1.1"
description = "A ChatGPT CLI tool based on the OpenAI API, for hardcore terminal users."
authors = [
    {name = "jaypei", email = "jaypei97159@gmail.com"},
]
dependencies = [
    "prompt-toolkit>=3.0.38",
    "openai>=0.27.0",
    "rich>=13.3.2",
    "click>=8.1.3",
    "attrs>=22.2.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
chatgpt-cli = "chatgpt_cli.main:cli"
